--- a/smartstock/pubspec.yaml
+++ b/smartstock/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
-
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.17.0
+  cloud_firestore: ^4.15.0
 
 dev_dependencies:
   flutter_test:
